# Manthan

./: .dockerignore  .env.example  .gitignore  .impeccable.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_RUNBOOK.md  DEPLOY.md  DEPLOY_NOW.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPEC.md  docker-compose.yml  fly.toml  pyproject.toml  render_spec.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
agent/: .env.example  README.md  SIGNUP_CHECKLIST.md  pyproject.toml
agent/research/: billing_ops_cases.md
agent/scripts/: bake_off.py  brutal_scenarios.py  coral_scenarios.py  coral_scenarios_data.py  coral_schema_parser.py  gmail_oauth_bootstrap.py  inspect_queries.py  manthan_mock_mcp.py  patch_m1_maya_duplicate.py  patch_q1_quill_outage.py  patch_v1_vermillion_seats.py  patch_w2_frankenstein.py  patch_w4_notion.py  patch_w4_zendesk.py  patch_w5_posthog.py  patch_w6_datadog.py  patch_w6_pagerduty.py  patch_w6_sentry.py  patch_w7r_aperture_prorata.py  probe_sources.py  real_workflows.py  scenario_bake.py  scenarios.py  seed_datadog.py  seed_hubspot.py  seed_intercom.py  seed_notion.py  seed_pagerduty.py  seed_posthog.py  seed_salesforce.py  seed_sentry.py  seed_slack.py  seed_world.py  seed_zendesk.py  setup_coral_bridge.py  smoke_agent.py  smoke_coral.py  smoke_llm.py
agent/src/manthan_agent/: config.py  coral_session.py  duckdb_world.py  llm.py  loop.py  pacer.py  prompts.py  state.py  tools.py  types.py
agent/src/manthan_agent/seed/: __init__.py  base.py  identity.py  scenarios.py
agent/tests/: test_pacer.py
deploy/vps/: Caddyfile.example  README.md  cloud-init.yaml  setup.sh
docs/: LAYER1_SPEC.md  LAYER2_OBSERVATIONS.md  LAYER3_OBSERVATIONS.md  README.md  api-reference.md  architecture.md  building-the-agent.md  data-context-schema.md  layer1_stress_test_report.md  layer3_spec_schema.md
infra/lobstertrap/: manthan-policy.yaml
infra/vps/: README.md  cloud-init.yaml  setup.sh
manthan-api/: .env.example  Dockerfile  fly.toml  pyproject.toml
manthan-api/schema/: 001_initial.sql  003_policy_engine.sql  005_auth_signups.sql
manthan-api/scripts/: seed_email_dispute_policy.sql
manthan-api/src/manthan_api/: __init__.py  db.py  main.py  models.py
manthan-api/src/manthan_api/adapters/: __init__.py  hubspot.py  linear.py  notion.py  resend.py  slack.py  stripe.py
manthan-api/src/manthan_api/api/: actions.py  audit.py  cases.py  chat.py  citations.py  clerk_webhook.py  demo.py  demo_v2.py  demo_v3.py  email_webhook.py  events.py  health.py  inbox.py  me.py  memory.py  narrative.py  policy.py  slack.py  sources.py  webhooks.py
manthan-api/src/manthan_api/middleware/: tenant.py
manthan-api/src/manthan_api/scripts/: bootstrap_dev_org.py
manthan-api/src/manthan_api/services/: brief_pdf.py  citation_links.py  citation_reasoning.py  email_dispatcher.py  email_templates.py  policy.py  resend_inbound.py  slack_bot.py  slack_notifier.py
manthan-api/src/manthan_api/workers/: actor.py  chat_loop.py  investigate.py  main.py  prettifier.py
manthan-ui/: .gitignore  .impeccable.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
manthan-ui/src/: App.tsx  AppRouter.tsx  globals.css  main.tsx
scripts/: captains_log.md  gen_blog_images.py  gen_hykr_diagrams.py  gen_story_images.py  generate_demo_data.py  publish_hykr_notion.py  seed_database.py  set-fly-secrets.sh
scripts/stress_test/: __init__.py  client.py  download_datasets.py  tier1.py  tier2.py  tier3.py  tier4.py  tier5.py  user_simulator.py  validate_render_spec.py
src/: README.md  __init__.py  main.py
src/agent/: README.md  __init__.py  aliasing.py  artifact_repair.py  artifact_style.py  config.py  events.py  loop.py  prompt.py  session_history.py  tools.py
src/analysis/: __init__.py
src/api/: README.md  __init__.py  agent.py  agent_tasks.py  ask_user.py  audit.py  clarification.py  connections.py  datasets.py  health.py  memory.py  pipeline.py  plans.py  status.py  subagents.py  tool_discovery.py  tools.py
src/core/: README.md  __init__.py  agent_tasks.py  ask_user.py  config.py  credentials.py  database.py  dcd_history.py  exceptions.py  llm.py  logger.py  memory.py  metrics.py  plans.py  rate_limit.py  state.py  subagents.py
src/ingestion/: __init__.py  base.py  dlt_runner.py  gateway.py  registry.py  relationships.py  validators.py
src/materialization/: __init__.py  exporter.py  optimizer.py  quality.py  query_generator.py  summarizer.py
src/profiling/: __init__.py  agent.py  clarification.py  classifier.py  enricher.py  pii_detector.py  presidio_layer.py  statistical.py
src/sandbox/: Dockerfile  prelude.py  repl.py  requirements.txt
src/semantic/: README.md  __init__.py  editor.py  generator.py  pruner.py  render_spec.py  schema.py  validator.py
src/tools/: __init__.py  context_tool.py  metric_tool.py  python_session.py  python_tool.py  schema_tool.py  sql_tool.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: sample_sales.csv
tests/test_api/: __init__.py  test_agent_primitives_api.py  test_datasets_api.py  test_health.py  test_plan_approval_gate.py
tests/test_core/: __init__.py  conftest.py  test_agent_tasks.py  test_ask_user.py  test_config.py  test_database.py  test_exceptions.py  test_llm.py  test_llm_retry.py  test_logger.py  test_memory.py  test_metrics.py  test_plans.py  test_subagents.py
tests/test_ingestion/: __init__.py  conftest.py  test_base.py  test_base_quote_identifier.py  test_csv_loader.py  test_db_loader.py  test_excel_loader.py  test_gateway.py  test_json_loader.py  test_parquet_loader.py  test_registry.py  test_validators.py
tests/test_materialization/: __init__.py  test_exporter.py  test_optimizer.py  test_quality.py  test_query_generator.py  test_summarizer.py
tests/test_profiling/: __init__.py  conftest.py  test_agent.py  test_clarification.py  test_classifier.py  test_enricher.py  test_pii_detector.py  test_pii_numeric.py  test_presidio_layer.py  test_statistical.py
tests/test_semantic/: __init__.py  conftest.py  (+5 more)
(+171 files in other folders)
