[project]
name = "manthan"
version = "1.0.0"
description = "A 3-layer autonomous data analyst platform: data pipeline + semantic layer + agent toolbox."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Hitakshi Arora", email = "hitakshi220@gmail.com" }]
keywords = [
    "data-analysis",
    "llm",
    "duckdb",
    "semantic-layer",
    "profiling",
    "autonomous-agent",
    "data-context-document",
    "fastapi",
    "natural-language-query",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
]

# Runtime dependencies. All licenses must be Apache 2.0, MIT, BSD, or PSF.
# See SPEC.md §8 (Dependency Matrix) for rationale and per-package purpose.
dependencies = [
    "duckdb>=1.2.0",               # MIT — analytical engine, ingestion, SQL
    "pyyaml>=6.0",                 # MIT — DCD serialization
    "fastapi>=0.115.0",            # MIT — API server
    "uvicorn[standard]>=0.34.0",   # BSD-3 — ASGI server
    "docker>=7.0",                 # Apache-2.0 — sandbox management
    "httpx>=0.28.0",               # BSD-3 — async HTTP client (OpenRouter)
    "pandas>=2.2.0",               # BSD-3 — DataFrame interop
    "pyarrow>=17.0",               # Apache-2.0 — Parquet read/write for agent artifacts
    "pydantic>=2.9.0",             # MIT — data models
    "pydantic-settings>=2.5.0",    # MIT — typed env-var configuration
    "structlog>=24.4.0",           # MIT / Apache-2.0 dual — structured JSON logs
    "python-multipart>=0.0.12",    # Apache-2.0 — multipart upload parsing
    "openpyxl>=3.1",               # MIT — Excel xlsx read/write for tests + loader
    "slowapi>=0.1.9",              # MIT — IP-based rate limiting
    "websockets>=13.0",            # BSD-3 — FastAPI websocket dependency
    "sqlglot>=23",                 # MIT — SQL parser for semantic validator (Phase 2)
    "cryptography>=42",            # Apache-2.0 / BSD — Fernet for credential vault (Phase 5)
    "dlt[duckdb]>=1.8",            # Apache-2.0 — SaaS ingestion long tail (Phase 6)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",                 # MIT
    "pytest-cov>=5.0",             # MIT
    "pytest-asyncio>=0.24",        # Apache-2.0
    "ruff>=0.7",                   # MIT
    "testcontainers[postgres]>=4.0", # Apache-2.0 — ephemeral Postgres for tests
]

[project.urls]
Homepage = "https://manthan.quest"
Repository = "https://github.com/hitakshiA/Manthan"
Documentation = "https://github.com/hitakshiA/Manthan/tree/main/docs"
"Bug Tracker" = "https://github.com/hitakshiA/Manthan/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Ruff (format + lint) ------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic set: pycodestyle, pyflakes, imports, naming, bugbear, pyupgrade,
# flake8-comprehensions, flake8-simplify, pytest-style, and ruff-specific rules.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests may use asserts and skip some strictness.
"tests/**" = ["S101"]
# Files with embedded prompt / SQL / CSS strings and intentional en-dash /
# multiplication-sign unicode that shouldn't be line-wrapped or ASCII-folded.
# Keeping the long strings intact is more readable than shoving continuation
# backslashes into every prompt.
"src/agent/prompt.py" = ["RUF001", "RUF002", "RUF003", "E501"]
"src/agent/tools.py" = ["E501"]
"src/agent/artifact_style.py" = ["E501"]
"src/agent/session_history.py" = ["RUF002", "RUF003"]
"src/agent/artifact_repair.py" = ["RUF002", "RUF003"]
"src/agent/loop.py" = ["RUF002", "RUF003"]
"src/api/audit.py" = ["E501", "RUF002", "RUF003"]
"src/core/credentials.py" = ["E501"]
"src/api/datasets.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Pytest --------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "slow: slower integration/system tests (deselect with -m 'not slow')",
]
