# Manthan investigation agent.
#
# A small Python loop that drives an LLM (via OpenRouter, default
# deepseek/deepseek-v4-pro:exacto) over the Coral SQL data plane (over MCP)
# to investigate billing-ops cases, draft replies, propose actions.
#
# No agent framework. ~hundreds of LOC, fully transparent loop.

[project]
name = "manthan-agent"
version = "0.1.0"
description = "Manthan investigation agent over the Coral SQL plane."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Hitakshi Arora", email = "hitakshi@miny-labs.com" },
    { name = "Akash Mondal", email = "akash@miny-labs.com" },
]

# Runtime dependencies. Keep this list tight.
dependencies = [
    "openai>=1.55.0",          # MIT  - OpenAI-compat client, points at OpenRouter
    "mcp>=1.2.0",              # MIT  - Model Context Protocol stdio client
    "pydantic>=2.7",           # MIT  - typed tool args + structured outputs
    "python-dotenv>=1.0",      # BSD  - loads .env into os.environ
    "anyio>=4.4",              # MIT  - async backend for mcp
    "rich>=13.7",              # MIT  - pretty console output
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manthan_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length governed by formatter
