[project]
name = "manthan-api"
version = "0.1.0"
description = "Manthan backend - multi-tenant API + workers around the agent brain."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
authors = [{ name = "Miny Labs" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "cryptography>=43",
    "stripe>=11.0",
    "resend>=2.6",
    "slack-sdk>=3.33",
    "pyyaml>=6.0",
    "reportlab>=4.2",
    # Bring the existing agent brain in as a library:
    "manthan-agent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.uv.sources]
manthan-agent = { path = "../agent", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manthan_api"]

[tool.ruff]
target-version = "py312"
line-length = 100
